Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/DuplicateErrors.out
DuplicateErrors.java:11:1: compiler.err.duplicate.annotation.missing.container: Foo
DuplicateErrors.java:12:1: compiler.err.duplicate.annotation.missing.container: Foo
2 errors
